hphp/test/slow/readonly/prop_cow.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Read-Only collections cannot be mutated.' in %s/prop_cow.php:19
%A
